<resources>
    <string name="app_name">Dogedex</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="group">Group</string>
    <string name="male">Male</string>
    <string name="error_showing_dog_not_found">Error showing dog, dog not found</string>
    <string name="dog_index_format">#%d</string>
    <string name="dog_life_expectancy_format">%s years</string>
    <string name="unknown_host_exception_error">There is no internet connection</string>
    <string name="unknown_error">There was an error</string>
    <string name="register">Register</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_must_not_be_empty">Password must not be empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="error_sign_up">Error signing up</string>
    <string name="error_sign_in">Error logging in</string>
    <string name="user_already_exists">User already exists</string>
    <string name="there_was_an_error">There was an error</string>
    <string name="wrong_user_or_password">Wrong user or password</string>
    <string name="this_is_a_content_description">This is a content description</string>
    <string name="logout">Logout</string>
    <string name="error_adding_dog">There was an error adding dog to collection</string>
    <string name="camera_permission_rationale_dialog_message">Acepta la camara o me da amsiedad</string>
    <string name="camera_permission_rationale_dialog_title">Aceptame por favor</string>
    <string name="camera_permission_rejected_message">You need to accept camera permission to use camera</string>
    <string name="title_activity_dog_detail_compose">DogDetailComposeActivity</string>
    <string name="error_dialog_title">Oops, something happened!</string>
    <string name="try_again">Try again</string>
    <string name="my_dog_collection">My dog collection</string>
</resources>